--- a/index.html
+++ b/index.html
@@ -128,20 +128,21 @@
     <p class="fade-in delay4">LinkedIn: <a href="https://www.linkedin.com/in/israel-babalola-629b5837b" target="_blank">linkedin.com/in/israel-babalola-629b5837b</a></p>
 
     <!-- Contact Form -->
-    <form class="contact-form fade-in delay5" action="https://formspree.io/f/{YOUR_FORM_ID}" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <select name="subject" required>
-        <option value="" disabled selected>Subject</option>
-        <option value="Project Inquiry">Project Inquiry</option>
-        <option value="Collaboration">Collaboration</option>
-        <option value="Job Opportunity">Job Opportunity</option>
-      </select>
-      <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
+     <form class="contact-form fade-in delay5" action="https://formspree.io/f/myzlzqlz" method="POST">
+  <input type="text" name="name" placeholder="Your Name" required>
+  <input type="email" name="email" placeholder="Your Email" required>
+  <select name="subject" required>
+    <option value="" disabled selected>Subject</option>
+    <option value="Project Inquiry">Project Inquiry</option>
+    <option value="Collaboration">Collaboration</option>
+    <option value="Job Opportunity">Job Opportunity</option>
+  </select>
+  <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+  <button type="submit">Send Message</button>
+  </form>
   </section>
 
   <script src="script.js"></script>
 </body>
 </html>
+
