--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div>
 
     <p class="fade-in delay9">
-      I’m constantly learning, building, messing up, and improving. That’s how I get better.
+      Engineering digiital solutions, from concept to deploymet.
     </p>
   </section>
 
@@ -145,6 +145,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
