--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <h2 class="fade-in">Projects</h2>
 
     <div class="project fade-in delay1">
-      <h3>Kairos: AI-Powered Health & Wellness Platform</h3>
-      <p>Kairos is my AI-powered health and wellness platform. It helps users track workouts, mood, nutrition, and medication intelligently. Built with React Native, Python, and AI integration, it creates a seamless wellness experience.</p>
-      <a href="https://israelbabalola049-cmd.github.io/kairos2" class="project-link">View Project</a>
+      <h3>Kairos: Health & Wellness Platform</h3>
+      <p>Kairos is health and wellness platform. We collaborated on creating holistic wellness solutions, integrating physical, mental, and spiritual health strategies.  </p>
+      <a href="https://www.kairoswellnesscollective.com" class="project-link">View Project</a>
     </div>
 
     <div class="project fade-in delay2">
@@ -145,6 +145,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
