--- a/index.html
+++ b/index.html
@@ -86,17 +86,17 @@
 
     <div class="skill-bar fade-in delay3">
       <p>Python</p>
-      <div class="bar"><div class="fill" data-width="80%"></div></div>
+      <div class="bar"><div class="fill" data-width="75%"></div></div>
     </div>
 
     <div class="skill-bar fade-in delay4">
       <p>Node.js / Backend Basics</p>
-      <div class="bar"><div class="fill" data-width="75%"></div></div>
+      <div class="bar"><div class="fill" data-width="65%"></div></div>
     </div>
 
     <div class="skill-bar fade-in delay5">
       <p>SQL</p>
-      <div class="bar"><div class="fill" data-width="70%"></div></div>
+      <div class="bar"><div class="fill" data-width="60%"></div></div>
     </div>
 
     <div class="skill-bar fade-in delay6">
@@ -115,7 +115,7 @@
     </div>
 
     <p class="fade-in delay9">
-      Engineering digiital solutions, from concept to deploymet.
+      Engineering digiital solutions, from concept to deployment.
     </p>
   </section>
 
@@ -145,6 +145,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
