--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <section class="about" id="about">
     <h2 class="fade-in">About Me</h2>
     <p class="fade-in delay1">
-      I’m Israel Olamide Babalola, a Computer Science student who loves building real things that work. I’m passionate about AI, full-stack development, and creating tools that solve problems. I learn by doing — building, testing, breaking, and improving. That’s how I grow.
+      I’m Israel Olamide Babalola, a Computer Science student who loves building smart solutions and digital experiences. I’m passionate about AI, full-stack development, and creating tools that solve problems. I learn by doing — building, testing, breaking, and improving. I'm also strategic about growth, I'm always trying to level up my skills while balancing deep thinking and practicality.
     </p>
     <p class="fade-in delay2">
       Beyond coding, I enjoy music, art, and analyzing patterns. I love connecting ideas from different areas and seeing how they fit together. Integrity, consistency, and growth are core to how I operate. I value the struggle that leads to mastery over shortcuts any day.
@@ -145,6 +145,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
