--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div>
 
     <p class="fade-in delay9">
-      Engineering digiital solutions, from concept to deployment.
+      Engineering digital solutions, from concept to deployment.
     </p>
   </section>
 
@@ -145,6 +145,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
