--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Israel Olamide Babalola | Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style2.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="style2.css" />
 </head>
 <body>
-
   <!-- Mobile Hamburger -->
   <div class="hamburger" id="hamburger">
     <div></div>
@@ -31,7 +33,10 @@
     <div class="hero-glass-full fade-in">
       <h1>Hi, I’m Israel Olamide Babalola</h1>
       <h3>Aspiring Software Developer | AI Enthusiast | Full-Stack Explorer</h3>
-      <p class="tagline">Turning ideas into digital experiences, one line of code at a time. Welcome to my world of tech, creativity, and innovation.</p>
+      <p class="tagline">
+        Turning ideas into digital experiences, one line of code at a time.
+        Welcome to my world of tech, creativity, and innovation.
+      </p>
       <a href="#projects" class="cta-btn">View Projects</a>
     </div>
   </section>
@@ -40,10 +45,19 @@
   <section class="about" id="about">
     <h2 class="fade-in">About Me</h2>
     <p class="fade-in delay1">
-      I’m Israel Olamide Babalola, a Computer Science student who loves building smart solutions and digital experiences. I’m passionate about AI, full-stack development, and creating tools that solve problems. I learn by doing — building, testing, breaking, and improving. I'm also strategic about growth, I'm always trying to level up my skills while balancing deep thinking and practicality.
+      I’m Israel Olamide Babalola, a Computer Science student who loves building
+      smart solutions and digital experiences. I’m passionate about AI,
+      full-stack development, and creating tools that solve problems. I learn
+      by doing — building, testing, breaking, and improving. I'm also strategic
+      about growth, I'm always trying to level up my skills while balancing
+      deep thinking and practicality.
     </p>
     <p class="fade-in delay2">
-      Beyond coding, I explore music, art, creative projects, and expressive ideas. I mainly just like to connect ideas from different areas and seeing how they fit together. Integrity, consistency, and growth are core to how I operate. I value the struggle that leads to mastery over shortcuts any day.
+      Beyond coding, I explore music, art, creative projects, and expressive
+      ideas. I mainly just like to connect ideas from different areas and
+      seeing how they fit together. Integrity, consistency, and growth are core
+      to how I operate. I value the struggle that leads to mastery over
+      shortcuts any day.
     </p>
   </section>
 
@@ -53,20 +67,37 @@
 
     <div class="project fade-in delay1">
       <h3>Kairos: Health & Wellness Platform</h3>
-      <p>Kairos is a health and wellness platform. We collaborated on creating holistic wellness solutions, integrating physical, mental, and spiritual health strategies.  </p>
-      <a href="https://www.kairoswellnesscollective.com" class="project-link">View Project</a>
+      <p>
+        Kairos is a health and wellness platform. We collaborated on creating
+        holistic wellness solutions, integrating physical, mental, and spiritual
+        health strategies.
+      </p>
+      <a href="https://www.kairoswellnesscollective.com" class="project-link"
+        >View Project</a
+      >
     </div>
 
     <div class="project fade-in delay2">
       <h3>Portfolio Website</h3>
-      <p>This site is a modern, responsive portfolio showcasing my skills, projects, and story as a tech enthusiast and aspiring developer.</p>
+      <p>
+        This site is a modern, responsive portfolio showcasing my skills,
+        projects, and story as a tech enthusiast and aspiring developer.
+      </p>
       <a href="#" class="project-link">View Project</a>
     </div>
 
     <div class="project fade-in delay3">
       <h3>Debsteph Hall School Website</h3>
-      <p>Redesigned and enhanced my mother’s school website for better usability, aesthetic appeal, and modern responsiveness using HTML, CSS, and JavaScript.</p>
-      <a href="https://israelbabalola049-cmd.github.io/debstephhall.github.io/" class="project-link">View Project</a>
+      <p>
+        Redesigned and enhanced my mother’s school website for better usability,
+        aesthetic appeal, and modern responsiveness using HTML, CSS, and
+        JavaScript.
+      </p>
+      <a
+        href="https://israelbabalola049-cmd.github.io/debstephhall.github.io/"
+        class="project-link"
+        >View Project</a
+      >
     </div>
   </section>
 
@@ -115,43 +146,122 @@
     </div>
   </section>
 
+  <!-- Experience Section -->
+  <section class="experience" id="experience">
+    <h2 class="fade-in">Experience</h2>
+    <p class="fade-in delay1">Where I’ve applied my skills so far</p>
+
+    <div class="experience-item fade-in delay2">
+      <h3>Student Web Developer — Babcock University</h3>
+      <p class="experience-date">2024 – Present</p>
+      <ul>
+        <li>
+          Designing and building responsive web applications as part of my
+          academic work and independent learning as a Computer Science student
+        </li>
+        <li>
+          Applying core frontend technologies such as
+          <strong>HTML, CSS, and JavaScript</strong> to translate ideas and
+          requirements into functional user interfaces
+        </li>
+        <li>
+          Writing structured, readable code while gradually adopting clean code
+          principles and best practices
+        </li>
+        <li>
+          Using <strong>Git and GitHub</strong> for version control, project
+          organization, and tracking progress across multiple projects
+        </li>
+        <li>
+          Actively refining projects through iteration, debugging, and feedback
+          to improve both functionality and user experience
+        </li>
+      </ul>
+      <p class="experience-note">
+        This experience includes coursework, personal projects, and continuous
+        self-driven practice while studying at Babcock University.
+      </p>
+    </div>
+  </section>
+
+  <!-- Current Focus Section -->
+  <section class="current-focus" id="current-focus">
+    <p class="fade-in lead-in">A snapshot of where I am right now</p>
+    <h2 class="fade-in">Current Focus</h2>
+
+    <div class="focus-cards">
+      <div class="focus-card fade-in delay1">
+        <h3>🛠 Building</h3>
+        <p>
+          Working on small to medium-scale web projects that strengthen my
+          understanding of frontend development, improve my problem-solving
+          skills, and reinforce good development habits.
+        </p>
+      </div>
+      <div class="focus-card fade-in delay2">
+        <h3>📚 Learning</h3>
+        <p>
+          Deepening my knowledge of <strong>JavaScript</strong>, data
+          structures, and foundational computer science concepts through a
+          combination of coursework, documentation, and hands-on experimentation.
+        </p>
+      </div>
+      <div class="focus-card fade-in delay3">
+        <h3>🎯 Aiming For</h3>
+        <p>
+          Actively seeking <strong>internship opportunities</strong> where I
+          can learn from experienced developers, gain exposure to real-world
+          software development workflows, and contribute positively to a
+          collaborative team environment.
+        </p>
+      </div>
+    </div>
+  </section>
+
   <!-- Contact Section -->
   <section class="contact" id="contact">
-    <h2 class="fade-in">Contact Me</h2>
-    <p class="fade-in delay1">Let’s collaborate, innovate, and build something extraordinary together.</p>
-    <p class="fade-in delay2">Email: israelbabalola049@gmail.com</p>
-    <p class="fade-in delay3">Phone: +234 (0) 9151980801</p>
-    <p class="fade-in delay4">LinkedIn: <a href="https://www.linkedin.com/in/israel-babalola-629b5837b" target="_blank">linkedin.com/in/israel-babalola-629b5837b</a></p>
+    <h2 class="fade-in">Let’s Collaborate</h2>
+    <p class="fade-in delay1">
+      I’m always excited to connect, innovate, and build meaningful projects
+      with passionate people.
+    </p>
+    <div class="contact-details fade-in delay2">
+      <p>Email: israelbabalola049@gmail.com</p>
+      <p>Phone: +234 (0) 9151980801</p>
+      <p>
+        LinkedIn:
+        <a
+          href="https://www.linkedin.com/in/israel-babalola-629b5837b"
+          target="_blank"
+          >linkedin.com/in/israel-babalola-629b5837b</a
+        >
+      </p>
+    </div>
 
     <!-- Contact Form -->
-     <form class="contact-form fade-in delay5" action="https://formspree.io/f/myzlzqlz" method="POST">
-  <input type="text" name="name" placeholder="Your Name" required>
-  <input type="email" name="email" placeholder="Your Email" required>
-  <select name="subject" required>
-    <option value="" disabled selected>Subject</option>
-    <option value="Project Inquiry">Project Inquiry</option>
-    <option value="Collaboration">Collaboration</option>
-    <option value="Job Opportunity">Job Opportunity</option>
-  </select>
-  <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-  <button type="submit">Send Message</button>
-  </form>
+    <form
+      class="contact-form fade-in delay3"
+      action="https://formspree.io/f/myzlzqlz"
+      method="POST"
+    >
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <select name="subject" required>
+        <option value="" disabled selected>Subject</option>
+        <option value="Project Inquiry">Project Inquiry</option>
+        <option value="Collaboration">Collaboration</option>
+        <option value="Job Opportunity">Job Opportunity</option>
+      </select>
+      <textarea
+        name="message"
+        placeholder="Your Message"
+        rows="5"
+        required
+      ></textarea>
+      <button type="submit">Send Message</button>
+    </form>
   </section>
 
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
