--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         Turning ideas into digital experiences, one line of code at a time.
         Welcome to my world of tech, creativity, and innovation.
       </p>
-      <a href="#projects" class="cta-btn">View Projects</a>
+      <a href="#projects" class="cta-btn">Let's Collaborate</a>
     </div>
   </section>
 
@@ -222,7 +222,7 @@
   <section class="contact" id="contact">
     <h2 class="fade-in">Let’s Collaborate</h2>
     <p class="fade-in delay1">
-      I’m always excited to connect, innovate, and build meaningful projects
+     You can hit me up at anytime, i'm always excited to connect, innovate, and create meaningful ideas
       with passionate people.
     </p>
     <div class="contact-details fade-in delay2">
@@ -265,3 +265,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
