--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         Turning ideas into digital experiences, one line of code at a time.
         Welcome to my world of tech, creativity, and innovation.
       </p>
-      <a href="#projects" class="cta-btn">Let's Collaborate</a>
+      <a href="#Contact" class="cta-btn">Let's Collaborate</a>
     </div>
   </section>
 
@@ -265,4 +265,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
