--- a/index.html
+++ b/index.html
@@ -105,44 +105,56 @@
   <section class="skills" id="skills">
     <h2 class="fade-in">Skills</h2>
 
-    <div class="skill-bar fade-in delay1">
-      <p>HTML / CSS</p>
-      <div class="bar"><div class="fill" data-width="90%"></div></div>
+    <div class="skills-profile fade-in delay1">
+      <img src="your-photo.jpg" alt="Israel Olamide Babalola" class="profile-pic" />
+      <div class="profile-info">
+        <p class="code-sniper">"code sniper"</p>
+      </div>
     </div>
 
     <div class="skill-bar fade-in delay2">
-      <p>JavaScript / React</p>
-      <div class="bar"><div class="fill" data-width="85%"></div></div>
+      <p>HTML5 / CSS3 / JS</p>
+      <div class="bar"><div class="fill" data-width="90%"><span class="percent">90%</span></div></div>
     </div>
 
     <div class="skill-bar fade-in delay3">
-      <p>Python</p>
-      <div class="bar"><div class="fill" data-width="75%"></div></div>
+      <p>Responsive Design</p>
+      <div class="bar"><div class="fill" data-width="90%"><span class="percent">90%</span></div></div>
     </div>
 
     <div class="skill-bar fade-in delay4">
-      <p>Node.js / Backend Basics</p>
-      <div class="bar"><div class="fill" data-width="65%"></div></div>
+      <p>Git/Github & Version Control</p>
+      <div class="bar"><div class="fill" data-width="80%"><span class="percent">80%</span></div></div>
     </div>
 
     <div class="skill-bar fade-in delay5">
-      <p>SQL</p>
-      <div class="bar"><div class="fill" data-width="60%"></div></div>
+      <p>Node.js / APIs</p>
+      <div class="bar"><div class="fill" data-width="65%"><span class="percent">65%</span></div></div>
     </div>
 
     <div class="skill-bar fade-in delay6">
-      <p>Git / Version Control</p>
-      <div class="bar"><div class="fill" data-width="80%"></div></div>
+      <p>SQL Basics</p>
+      <div class="bar"><div class="fill" data-width="55%"><span class="percent">55%</span></div></div>
     </div>
 
     <div class="skill-bar fade-in delay7">
-      <p>Figma / Design Tools</p>
-      <div class="bar"><div class="fill" data-width="75%"></div></div>
+      <p>Python</p>
+      <div class="bar"><div class="fill" data-width="75%"><span class="percent">75%</span></div></div>
     </div>
 
     <div class="skill-bar fade-in delay8">
-      <p>Problem-Solving / Logic</p>
-      <div class="bar"><div class="fill" data-width="95%"></div></div>
+      <p>C / C++</p>
+      <div class="bar"><div class="fill" data-width="75%"><span class="percent">75%</span></div></div>
+    </div>
+
+    <div class="skill-bar fade-in delay9">
+      <p>Data Structures & Algorithms</p>
+      <div class="bar"><div class="fill" data-width="75%"><span class="percent">75%</span></div></div>
+    </div>
+
+    <div class="skill-bar fade-in delay10">
+      <p>CLI</p>
+      <div class="bar"><div class="fill" data-width="80%"><span class="percent">80%</span></div></div>
     </div>
   </section>
 
@@ -265,7 +277,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
