--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <h2 class="fade-in">Skills</h2>
 
     <div class="skills-profile fade-in delay1">
-      <img src="your-photo.jpg" alt="Israel Olamide Babalola" class="profile-pic" />
+      <img src="IMG_7767.jpeg" alt="Israel Olamide Babalola" class="profile-pic" />
       <div class="profile-info">
         <p class="code-sniper">"code sniper"</p>
       </div>
@@ -277,3 +277,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
