--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
 
     <div class="skill-bar fade-in delay2">
-      <p>HTML5 / CSS3 / JS</p>
+      <p>HTML5 / CSS3 / JS (ES6+)</p>
       <div class="bar"><div class="fill" data-width="90%"><span class="percent">90%</span></div></div>
     </div>
 
@@ -277,4 +277,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
