--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="skills-profile fade-in delay1">
       <img src="IMG_7767.jpeg" alt="Israel Olamide Babalola" class="profile-pic" />
       <div class="profile-info">
-        <p class="code-sniper">"code sniper"</p>
+        <p class="code-sniper">"code-sniper"</p>
       </div>
     </div>
 
@@ -277,5 +277,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
