--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
   </section>
 
   <!-- Skills Section -->
-  <section class="skills" id="skills">
-    <h2 class="fade-in">Skills</h2>
+  <section class="expertise" id="skills">
+    <h2 class="fade-in">Expertise</h2>
 
     <div class="skills-profile fade-in delay1">
       <img src="IMG_7767.jpeg" alt="Israel Olamide Babalola" class="profile-pic" />
@@ -277,6 +277,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
