--- a/index.html
+++ b/index.html
@@ -114,47 +114,47 @@
 
     <div class="skill-bar fade-in delay2">
       <p>HTML5 / CSS3 / JS (ES6+)</p>
-      <div class="bar"><div class="fill" data-width="90%"><span class="percent">90%</span></div></div>
+      <div class="bar"><div class="fill" data-width="80%"><span class="percent">80%</span></div></div>
     </div>
 
     <div class="skill-bar fade-in delay3">
       <p>Responsive Design</p>
-      <div class="bar"><div class="fill" data-width="90%"><span class="percent">90%</span></div></div>
+      <div class="bar"><div class="fill" data-width="83%"><span class="percent">83%</span></div></div>
     </div>
 
     <div class="skill-bar fade-in delay4">
       <p>Git/Github & Version Control</p>
-      <div class="bar"><div class="fill" data-width="80%"><span class="percent">80%</span></div></div>
+      <div class="bar"><div class="fill" data-width="78%"><span class="percent">78%</span></div></div>
     </div>
 
     <div class="skill-bar fade-in delay5">
       <p>Node.js / APIs</p>
-      <div class="bar"><div class="fill" data-width="65%"><span class="percent">65%</span></div></div>
+      <div class="bar"><div class="fill" data-width="67%"><span class="percent">67%</span></div></div>
     </div>
 
     <div class="skill-bar fade-in delay6">
-      <p>SQL Basics</p>
-      <div class="bar"><div class="fill" data-width="55%"><span class="percent">55%</span></div></div>
+      <p>SQL</p>
+      <div class="bar"><div class="fill" data-width="59%"><span class="percent">59%</span></div></div>
     </div>
 
     <div class="skill-bar fade-in delay7">
       <p>Python</p>
-      <div class="bar"><div class="fill" data-width="75%"><span class="percent">75%</span></div></div>
+      <div class="bar"><div class="fill" data-width="74%"><span class="percent">74%</span></div></div>
     </div>
 
     <div class="skill-bar fade-in delay8">
       <p>C / C++</p>
-      <div class="bar"><div class="fill" data-width="75%"><span class="percent">75%</span></div></div>
+      <div class="bar"><div class="fill" data-width="71%"><span class="percent">71%</span></div></div>
     </div>
 
     <div class="skill-bar fade-in delay9">
       <p>Data Structures & Algorithms</p>
-      <div class="bar"><div class="fill" data-width="75%"><span class="percent">75%</span></div></div>
+      <div class="bar"><div class="fill" data-width="77%"><span class="percent">77%</span></div></div>
     </div>
 
     <div class="skill-bar fade-in delay10">
       <p>CLI</p>
-      <div class="bar"><div class="fill" data-width="80%"><span class="percent">80%</span></div></div>
+      <div class="bar"><div class="fill" data-width="82"><span class="percent">82%</span></div></div>
     </div>
   </section>
 
@@ -277,6 +277,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
