--- a/index.html
+++ b/index.html
@@ -154,8 +154,11 @@
 
     <div class="skill-bar fade-in delay10">
       <p>CLI</p>
-      <div class="bar"><div class="fill" data-width="82"><span class="percent">82%</span></div></div>
+      <div class="bar"><div class="fill" data-width="82%"><span class="percent">82%</span></div></div>
     </div>
+    <p>
+    These findings reflect performance across several academic assessments and other sources.
+    </p>
   </section>
 
   <!-- Experience Section -->
@@ -277,6 +280,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
