--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <p>CLI</p>
       <div class="bar"><div class="fill" data-width="82%"><span class="percent">82%</span></div></div>
     </div>
-    <p>
+    <p class ="skills-note">
     These findings reflect performance across several academic assessments and other sources.
     </p>
   </section>
@@ -280,6 +280,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
