--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
     rel="stylesheet"
   />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style2.css" />
 </head>
 <body>
   <!-- Smooth scroll indicator -->
@@ -285,6 +285,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
