--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="hero-background"></div>
     <div class="hero-content">
       <div class="hero-text">
-        <h1 class="hero-title">Israel Olamide Babalola</h1>
+        <h1 class="hero-title">Hi, I'm Israel Olamide Babalola</h1>
         <h2 class="hero-subtitle">Aspiring Software Developer | AI Enthusiast | Full-Stack Explorer</h2>
         <p class="hero-description">
           Turning ideas into digital experiences, one line of code at a time.
@@ -366,6 +366,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
