--- a/index.html
+++ b/index.html
@@ -5,33 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Israel Olamide Babalola | Software Developer</title>
   <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Libre+Baskerville:wght@400;700&display=swap"
     rel="stylesheet"
   />
   <link rel="stylesheet" href="style2.css" />
 </head>
 <body>
   <!-- Navigation -->
-      <div class="nav-menu" id="navMenu">
-        <a href="#hero">Home</a>
-        <a href="#about">About</a>
-        <a href="#experience">Experience</a>
-        <a href="#projects">Projects</a>
-        <a href="#skills">Skills</a>
-        <a href="#contact">Contact</a>
-      </div>
+  <nav class="navbar" id="navbar">
+    <div class="container">
       <div class="nav-toggle" id="navToggle">
         <span></span>
         <span></span>
         <span></span>
       </div>
+      <div class="nav-menu" id="navMenu">
+        <a href="#hero">Home</a>
+        <a href="#about">About</a>
+        <a href="#expertise">Expertise</a>
+        <a href="#projects">Projects</a>
+        <a href="#experience">Experience</a>
+        <a href="#focus">Current Focus</a>
+        <a href="#contact">Contact</a>
+      </div>
     </div>
   </nav>
 
-  <!-- Hero Section -->
+  <!-- Hero Section with Profile Image -->
   <section class="hero" id="hero">
     <div class="hero-background"></div>
     <div class="hero-content">
+      <div class="profile-hero">
+        <img src="IMG_7767.jpeg" alt="Israel Olamide Babalola" class="hero-profile-image" />
+      </div>
       <div class="hero-text">
         <h1 class="hero-title">Hi, I'm Israel Olamide Babalola</h1>
         <h2 class="hero-subtitle">Aspiring Software Developer | AI Enthusiast | Full-Stack Explorer</h2>
@@ -48,14 +54,6 @@
   </section>
 
   <!-- About Section -->
-  <div class="about-profile">
-          <img src="IMG_7767.jpeg" alt="Israel Olamide Babalola" class="profile-image" />
-          <div class="profile-details">
-            <h3>Israel Babalola</h3>
-            <p class="profile-role">Software Developer</p>
-            <p class="profile-location">Ikenne, Ogun State, Nigeria</p>
-          </div>
-        </div>
   <section class="about section" id="about">
     <div class="container">
       <h2 class="section-title">About Me</h2>
@@ -76,31 +74,157 @@
             to how I operate. I value the struggle that leads to mastery over
             shortcuts any day.
           </p>
-        </div>  
+        </div>
+        <div class="about-profile">
+          <div class="profile-details">
+            <h3>Israel Babalola</h3>
+            <p class="profile-role">Software Developer</p>
+            <p class="profile-location">Ikenne, Ogun State, Nigeria</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- Experience Section -->
-  <section class="experience section" id="experience">
+  <!-- Expertise Section (formerly Skills) -->
+  <section class="expertise section" id="expertise">
     <div class="container">
-      <h2 class="section-title">Experience</h2>
-      <div class="timeline">
-        <div class="timeline-item">
-          <div class="timeline-marker"></div>
-          <div class="timeline-content">
-            <div class="timeline-header">
-              <h3>Student Web Developer</h3>
-              <span class="timeline-date">2024 — Present</span>
+      <h2 class="section-title">Technical Expertise</h2>
+      <div class="skills-intro">
+        <p class="code-tag">&lt;code-sniper /&gt;</p>
+        <p class="skills-note">Performance metrics from academic assessments and project work</p>
+      </div>
+      <div class="skills-grid">
+        <div class="skill-group">
+          <h3>Frontend Development</h3>
+          <div class="skill-item">
+            <div class="skill-info">
+              <span>HTML5 / CSS3 / JavaScript (ES6+)</span>
+              <span class="skill-percentage">80%</span>
             </div>
-            <p class="timeline-company">Babcock University</p>
-            <ul class="timeline-list">
-              <li>Designing and building responsive web applications as part of academic work and independent learning as a Computer Science student</li>
-              <li>Applying core frontend technologies such as HTML, CSS, and JavaScript to translate ideas and requirements into functional user interfaces</li>
-              <li>Writing structured, readable code while gradually adopting clean code principles and best practices</li>
-              <li>Using Git and GitHub for version control, project organization, and tracking progress across multiple projects</li>
-              <li>Actively refining projects through iteration, debugging, and feedback to improve both functionality and user experience</li>
-            </ul>
+            <div class="skill-bar">
+              <div class="skill-progress" data-progress="80"></div>
+            </div>
+          </div>
+          <div class="skill-item">
+            <div class="skill-info">
+              <span>Responsive Design & Mobile-First</span>
+              <span class="skill-percentage">83%</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" data-progress="83"></div>
+            </div>
+          </div>
+          <div class="skill-item">
+            <div class="skill-info">
+              <span>React / Component Architecture</span>
+              <span class="skill-percentage">72%</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" data-progress="72"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="skill-group">
+          <h3>Backend & Database</h3>
+          <div class="skill-item">
+            <div class="skill-info">
+              <span>Node.js / Express / REST APIs</span>
+              <span class="skill-percentage">67%</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" data-progress="67"></div>
+            </div>
+          </div>
+          <div class="skill-item">
+            <div class="skill-info">
+              <span>SQL / Database Design</span>
+              <span class="skill-percentage">59%</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" data-progress="59"></div>
+            </div>
+          </div>
+          <div class="skill-item">
+            <div class="skill-info">
+              <span>MongoDB / NoSQL</span>
+              <span class="skill-percentage">64%</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" data-progress="64"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="skill-group">
+          <h3>Programming Languages</h3>
+          <div class="skill-item">
+            <div class="skill-info">
+              <span>Python</span>
+              <span class="skill-percentage">74%</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" data-progress="74"></div>
+            </div>
+          </div>
+          <div class="skill-item">
+            <div class="skill-info">
+              <span>C / C++</span>
+              <span class="skill-percentage">71%</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" data-progress="71"></div>
+            </div>
+          </div>
+          <div class="skill-item">
+            <div class="skill-info">
+              <span>Java / Object-Oriented Programming</span>
+              <span class="skill-percentage">68%</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" data-progress="68"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="skill-group">
+          <h3>Tools & Technologies</h3>
+          <div class="skill-item">
+            <div class="skill-info">
+              <span>Git / GitHub & Version Control</span>
+              <span class="skill-percentage">78%</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" data-progress="78"></div>
+            </div>
+          </div>
+          <div class="skill-item">
+            <div class="skill-info">
+              <span>CLI / Command Line / Bash</span>
+              <span class="skill-percentage">82%</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" data-progress="82"></div>
+            </div>
+          </div>
+          <div class="skill-item">
+            <div class="skill-info">
+              <span>Data Structures & Algorithms</span>
+              <span class="skill-percentage">77%</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" data-progress="77"></div>
+            </div>
+          </div>
+          <div class="skill-item">
+            <div class="skill-info">
+              <span>Docker / Containerization</span>
+              <span class="skill-percentage">61%</span>
+            </div>
+            <div class="skill-bar">
+              <div class="skill-progress" data-progress="61"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -178,108 +302,96 @@
     </div>
   </section>
 
-  <!-- Skills Section -->
-  <section class="skills section" id="skills">
+  <!-- Experience Section -->
+  <section class="experience section" id="experience">
     <div class="container">
-      <h2 class="section-title">Technical Skills</h2>
-      <div class="skills-intro">
-        <p class="code-tag">&lt;code-sniper /&gt;</p>
-        <p class="skills-note">Performance metrics from academic assessments and project work</p>
+      <h2 class="section-title">Experience</h2>
+      <div class="timeline">
+        <div class="timeline-item">
+          <div class="timeline-marker"></div>
+          <div class="timeline-content">
+            <div class="timeline-header">
+              <h3>Student Web Developer</h3>
+              <span class="timeline-date">2024 — Present</span>
+            </div>
+            <p class="timeline-company">Babcock University</p>
+            <ul class="timeline-list">
+              <li>Designing and building responsive web applications as part of academic work and independent learning as a Computer Science student</li>
+              <li>Applying core frontend technologies such as HTML, CSS, and JavaScript to translate ideas and requirements into functional user interfaces</li>
+              <li>Writing structured, readable code while gradually adopting clean code principles and best practices</li>
+              <li>Using Git and GitHub for version control, project organization, and tracking progress across multiple projects</li>
+              <li>Actively refining projects through iteration, debugging, and feedback to improve both functionality and user experience</li>
+            </ul>
+          </div>
+        </div>
       </div>
-      <div class="skills-grid">
-        <div class="skill-group">
-          <h3>Frontend Development</h3>
-          <div class="skill-item">
-            <div class="skill-info">
-              <span>HTML5 / CSS3 / JavaScript (ES6+)</span>
-              <span class="skill-percentage">80%</span>
+    </div>
+  </section>
+
+  <!-- Current Focus Section -->
+  <section class="current-focus section" id="focus">
+    <div class="container">
+      <h2 class="section-title">Current Focus</h2>
+      <div class="focus-content">
+        <div class="focus-main">
+          <div class="focus-header">
+            <div class="focus-icon">
+              <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M22 10v6M2 10l10-5 10 5-10 5z"/>
+                <path d="M6 12v5c3 3 9 3 12 0v-5"/>
+              </svg>
             </div>
-            <div class="skill-bar">
-              <div class="skill-progress" data-progress="80"></div>
+            <div>
+              <h3>Computer Science Student</h3>
+              <p class="focus-institution">Babcock University</p>
             </div>
           </div>
-          <div class="skill-item">
-            <div class="skill-info">
-              <span>Responsive Design</span>
-              <span class="skill-percentage">83%</span>
-            </div>
-            <div class="skill-bar">
-              <div class="skill-progress" data-progress="83"></div>
-            </div>
+          <div class="focus-description">
+            <p>
+              Currently pursuing a Bachelor's degree in Computer Science, with a strong emphasis on 
+              software engineering fundamentals, artificial intelligence, and full-stack development. 
+              My academic journey is centered on building a solid foundation in both theoretical 
+              computer science and practical application development.
+            </p>
+            <p>
+              I'm actively engaged in coursework covering data structures, algorithms, object-oriented 
+              programming, database systems, and web technologies. Beyond the classroom, I dedicate 
+              time to personal projects that bridge academic concepts with real-world applications, 
+              constantly pushing myself to learn emerging technologies and industry best practices.
+            </p>
           </div>
         </div>
-
-        <div class="skill-group">
-          <h3>Backend & Database</h3>
-          <div class="skill-item">
-            <div class="skill-info">
-              <span>Node.js / APIs</span>
-              <span class="skill-percentage">67%</span>
+        
+        <div class="focus-highlights">
+          <h4>Areas of Deep Dive</h4>
+          <div class="focus-items">
+            <div class="focus-item">
+              <div class="focus-item-icon">🤖</div>
+              <div class="focus-item-content">
+                <h5>Artificial Intelligence</h5>
+                <p>Exploring machine learning, neural networks, and AI-driven solutions</p>
+              </div>
             </div>
-            <div class="skill-bar">
-              <div class="skill-progress" data-progress="67"></div>
+            <div class="focus-item">
+              <div class="focus-item-icon">🌐</div>
+              <div class="focus-item-content">
+                <h5>Full-Stack Development</h5>
+                <p>Building end-to-end web applications with modern frameworks and tools</p>
+              </div>
             </div>
-          </div>
-          <div class="skill-item">
-            <div class="skill-info">
-              <span>SQL</span>
-              <span class="skill-percentage">59%</span>
+            <div class="focus-item">
+              <div class="focus-item-icon">📊</div>
+              <div class="focus-item-content">
+                <h5>Algorithms & Data Structures</h5>
+                <p>Deepening understanding of computational efficiency and problem-solving</p>
+              </div>
             </div>
-            <div class="skill-bar">
-              <div class="skill-progress" data-progress="59"></div>
-            </div>
-          </div>
-        </div>
-
-        <div class="skill-group">
-          <h3>Programming Languages</h3>
-          <div class="skill-item">
-            <div class="skill-info">
-              <span>Python</span>
-              <span class="skill-percentage">74%</span>
-            </div>
-            <div class="skill-bar">
-              <div class="skill-progress" data-progress="74"></div>
-            </div>
-          </div>
-          <div class="skill-item">
-            <div class="skill-info">
-              <span>C / C++</span>
-              <span class="skill-percentage">71%</span>
-            </div>
-            <div class="skill-bar">
-              <div class="skill-progress" data-progress="71"></div>
-            </div>
-          </div>
-        </div>
-
-        <div class="skill-group">
-          <h3>Tools & Technologies</h3>
-          <div class="skill-item">
-            <div class="skill-info">
-              <span>Git / GitHub & Version Control</span>
-              <span class="skill-percentage">78%</span>
-            </div>
-            <div class="skill-bar">
-              <div class="skill-progress" data-progress="78"></div>
-            </div>
-          </div>
-          <div class="skill-item">
-            <div class="skill-info">
-              <span>CLI / Command Line</span>
-              <span class="skill-percentage">82%</span>
-            </div>
-            <div class="skill-bar">
-              <div class="skill-progress" data-progress="82"></div>
-            </div>
-          </div>
-          <div class="skill-item">
-            <div class="skill-info">
-              <span>Data Structures & Algorithms</span>
-              <span class="skill-percentage">77%</span>
-            </div>
-            <div class="skill-bar">
-              <div class="skill-progress" data-progress="77"></div>
+            <div class="focus-item">
+              <div class="focus-item-icon">🔧</div>
+              <div class="focus-item-content">
+                <h5>System Design</h5>
+                <p>Learning to architect scalable, maintainable software systems</p>
+              </div>
             </div>
           </div>
         </div>
@@ -290,7 +402,7 @@
   <!-- Contact Section -->
   <section class="contact section" id="contact">
     <div class="container">
-      <h2 class="section-title">Get In Touch</h2>
+      <h2 class="section-title">Contact Me or Send a Message</h2>
       <div class="contact-content">
         <div class="contact-info">
           <p class="contact-intro">
@@ -366,11 +478,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
