--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </p>
         </div>
         <div class="about-profile">
-          <img src="IMG_7767.jpeg" alt="Israel Olamide Babalola" class="about-profile-image" />
+          <img src="IMG_E6528.JPG" alt="Israel Olamide Babalola" class="about-profile-image" />
         </div>
       </div>
     </div>
@@ -570,4 +570,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
